<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pbg.se55.mypc.phuketbusguideline.MainActivity">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_searchRoute"
            android:id="@+id/btn_search_route"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_busStop"
            android:id="@+id/btn_bus_stop"
            android:layout_below="@+id/btn_search_route"
            android:layout_alignRight="@+id/btn_view"
            android:layout_alignEnd="@+id/btn_view"
            android:layout_alignLeft="@+id/btn_view"
            android:layout_alignStart="@+id/btn_view"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_view"
            android:id="@+id/btn_view"
            android:layout_below="@+id/btn_bus_stop"
            android:layout_alignRight="@+id/btn_info"
            android:layout_alignEnd="@+id/btn_info"
            android:layout_alignLeft="@+id/btn_info"
            android:layout_alignStart="@+id/btn_info"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_info"
            android:id="@+id/btn_info"
            android:layout_below="@+id/btn_view"
            android:layout_alignLeft="@+id/btn_search_route"
            android:layout_alignStart="@+id/btn_search_route"
            android:layout_alignParentBottom="false"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_comment"
            android:id="@+id/btn_comment"
            android:layout_below="@+id/btn_info"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/btn_info"
            android:layout_alignEnd="@+id/btn_info"
            android:layout_gravity="center_horizontal" />
        </LinearLayout>
</RelativeLayout>
